<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--
         main activity and fragments
    -->

    <!-- main activity -->
    <string name="app_name">Tactile Clock</string>
    <!-- shortcuts -->
    <string name="labelShortcutVibrateTime">Vibrate time</string>
    <!-- toolbar -->
    <string name="openNavigationDrawer">Open menu</string>
    <string name="closeNavigationDrawer">Close menu</string>
    <string name="menuItemSettings">Settings</string>
    <string name="menuItemInfo">Info</string>
    <string name="menuItemTutorial">Tutorial</string>


    <!-- power button service fragment -->
    <string name="fragmentPowerButton">Shortcut</string>
    <string name="buttonEnableService">Enable power button shortcut</string>
    <string name="labelPowerButtonFragmentDescription">To vibrate the current time, the display must be off.
        Then press the power button twice in quick succession.</string>
    <string name="labelPowerButtonClickInterval">Click interval:</string>
    <string name="buttonPowerButtonLowerSuccessBoundary">From</string>
    <string name="buttonPowerButtonUpperSuccessBoundary">To</string>
    <string name="labelScreenOffOnHeading">Screen turned on accidentally</string>
    <string name="buttonScreenOffOnDoNothing">Do nothing</string>
    <string name="buttonScreenOffOnErrorVibration">Warning vibration</string>
    <string name="buttonScreenOffOnVibrateTime">Vibrate time</string>
    <string name="labelScreenOffOnDescription">What should happen if the display is already on
        when double-clicking the power button, causing it to turn off and back on
        instead of briefly turning on and off again.</string>

    <!-- watch fragment -->
    <string name="fragmentWatch">Watch</string>
    <string name="buttonStartWatch">Start watch</string>
    <string name="labelWatchFragmentDescription">Continuous vibration of the current time</string>
    <string name="labelWatchVibrationOptions">Vibration</string>
    <string name="buttonEnableVibration">Vibrate time</string>
    <string name="buttonWatchInterval">Vibration interval</string>
    <string name="buttonWatchOnlyVibrateMinutes">Vibrate minutes only</string>
    <string name="buttonWatchStartAtNextFullHour">Start at next full hour</string>
    <string name="buttonWatchAnnouncementVibration">Announcement vibration</string>
    <string name="labelWatchSoundOptions">Sounds</string>
    <string name="buttonPlayGTS">Play Greenwich Time Signal</string>
    <string name="buttonWatchPlayGTSWhileMusic">Reproduce while music is playing</string>

    <!-- select integer dialog -->
    <string name="selectWatchIntervalDialogTitle">Vibration interval in minutes:</string>
    <string name="selectPowerButtonLowerSuccessBoundaryDialogTitle">Lower click interval in ms:</string>
    <string name="selectPowerButtonUpperSuccessBoundaryDialogTitle">Upper click interval in ms:</string>
    <string name="messageEnteredInvalidValue">The entered value must be greater than 0</string>


    <!--
         other activities and dialogs
    -->

    <!-- HelpDialog -->
    <string name="helpDialogTitle">Tutorial</string>
    <string name="labelApplicationDescription1">This Android app vibrates the current time when the
        display is locked and the power button is pressed twice in a row. If the double click is performed accidentally while the display is still
        active, the app can warn you with a long, persistent vibration.</string>
    <string name="labelApplicationDescription2">You may also use Tactile clock to keep informed about the current time. The app
        can vibrate the current time automatically every X minutes or every hour.</string>
    <string name="labelApplicationDescription3">It can also play the Greenwich Time Signal (a.k.a the pips)
        at the start of each hour, similar to a radio station.</string>
    <string name="labelApplicationDescription4">The background process automatically initiates once the system has finished booting.</string>
    <string name="labelVibrationPatternHeading">Vibration pattern:</string>
    <string name="labelVibrationPatternDescription1">Two different vibration pattern exist:</string>
    <string name="labelVibrationPatternDescription2">A short vibration stands for the digit 1 and a long one for the digit 5. The 2
        is represented by two consecutive short vibrations, the 6 by a long and a short one and so
        on. The 0 constitutes an exception with two long vibrations.</string>
    <string name="labelTimeFormatExampleHeading">Examples:</string>
    <string name="labelTimeFormatExample1">• 01:18 =  . &#160; .  -...</string>
    <string name="labelTimeFormatExample2">• 02:51 =  .. &#160; -  .</string>
    <string name="labelTimeFormatExample3">• 10:11 =  .  -- &#160; .  .</string>
    <string name="labelTimeFormatExample4">• 19:06 =  .  -.... &#160; -.</string>
    <string name="labelTimeFormatExplanationHeading">Explanation:</string>
    <string name="labelTimeFormatExplanation1">The time is processed digit by digit.</string>
    <string name="labelTimeFormatExplanation2">The . stands for a short and the - for a long vibration.</string>
    <string name="labelTimeFormatExplanation3">Leading zeros in the hour and minute fields are omitted.</string>
    <string name="labelTimeFormatGapHeading">Gaps:</string>
    <string name="labelTimeFormatGapDescription">To simplify the recognition of the vibration pattern,
        there exist three kind of gaps with different durations:</string>
    <string name="labelTimeFormatGap1">• []:     A short gap between vibrations in the same digit</string>
    <string name="labelTimeFormatGap2">• [ ]:   A medium gap for the separation of two digits within the hour and minute field</string>
    <string name="labelTimeFormatGap3">• [&#160;]: A long gap to split hours and minutes</string>


    <!-- settings activity -->
    <string name="settingsActivityTitle">Settings</string>
    <string name="switchRoundMinutes">Round minutes to 5</string>
    <string name="labelHourFormat">Choose between 12 and 24 hour time format</string>
    <string name="button12Hours">12 hour format</string>
    <string name="button24Hours">24 hour format</string>
    <string name="labelTimeComponentOrder">Time component order</string>
    <string name="buttonHoursMinutes">Hours first, then minutes</string>
    <string name="buttonMinutesHours">Minutes first, then hours</string>
    <string name="labelVibrationSettings">Vibration settings</string>
    <string name="switchMaxStrengthVibrations">Vibrate with maximal intensity</string>
    <string name="labelShort">Short</string>
    <string name="labelShortCD">Short vibration</string>
    <string name="labelLong">Long</string>
    <string name="labelLongCD">Long vibration</string>
    <string name="sliderVibrationDurationCD">Vibration duration</string>
    <string name="labelTestVibrationHeading">Test time vibration</string>
    <string name="buttonRefreshTestTime">Refresh time</string>
    <string name="buttonTestVibration">Test</string>

    <!-- info activity -->
    <string name="infoActivityTitle">Info</string>
    <string name="labelApplicationVersion">Version: </string>
    <string name="labelContactHeading">Contact:</string>
    <string name="labelEmailAddress">Email: %1$s</string>
    <string name="labelWebsite">This app is free software. You may find the source code on &lt;a href="%1$s"&gt;GitHub&lt;/a&gt;.</string>
    <string name="labelPrivacyHeading">Privacy</string>
    <string name="labelPrivacy0">The Android App Tactile Clock does not require an internet
        connection. All settings are stored exclusively on the device itself and are not shared with anyone.</string>
    <string name="labelPrivacy1">The app is free software and contains no advertising.</string>

    <!-- service -->
    <string name="serviceNotification">Shortcut: %1$s, Watch: %2$s</string>
    <string name="serviceNotificationWatchEnabled">Shortcut: %1$s, Watch: %2$s (%3$s)</string>

    <!-- standard messages, which are used in more than one component -->
    <string name="dialogOK">OK</string>
    <string name="dialogCancel">Cancel</string>
    <string name="dialogEnabled">On</string>
    <string name="dialogDisabled">Off</string>
    <string name="warningDndActive">Do Not Disturb is enabled.</string>
    <string name="warningRingerModeSilent">Phone is in silent mode.</string>
    <string name="warningExactAlarmPermissionMissing">Cannot schedule exact alarms. Please check permissions.</string>

    <!--
         plurals
    -->

    <plurals
        name="milliseconds">
        <item quantity="one">1 ms</item>
        <item quantity="other">%d ms</item>
    </plurals>

    <plurals
        name="minutes">
        <item quantity="one">1 Minute</item>
        <item quantity="other">%d Minutes</item>
    </plurals>

</resources>
