<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/buttonEnableService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/minHeight"
            android:textSize="@dimen/textSizeHeading"
            android:text="@string/buttonEnableService" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:layout_marginTop="4dp"
            android:text="@string/labelPowerButtonFragmentDescription" />


        <!-- click interval -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:layout_marginTop="20dp"
            android:text="@string/labelPowerButtonClickInterval"
            android:theme="@style/HeadingTextView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonPowerButtonLowerSuccessBoundary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/buttonPowerButtonLowerSuccessBoundary" />

            <Button
                android:id="@+id/buttonPowerButtonUpperSuccessBoundary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/buttonPowerButtonUpperSuccessBoundary" />
        </LinearLayout>


        <!-- what to do if screen was turned off-and-on instead of on-and-off -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:layout_marginTop="20dp"
            android:text="@string/labelScreenOffOnHeading"
            android:theme="@style/HeadingTextView" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:layout_marginTop="4dp"
            android:text="@string/labelScreenOffOnDescription" />

        <RadioGroup
            android:id="@+id/radioScreenOffOnAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/buttonScreenOffOnDoNothing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonScreenOffOnDoNothing" />

            <RadioButton
                android:id="@+id/buttonScreenOffOnErrorVibration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonScreenOffOnErrorVibration" />

            <RadioButton
                android:id="@+id/buttonScreenOffOnVibrateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonScreenOffOnVibrateTime" />
        </RadioGroup>

    </LinearLayout>
</ScrollView>
