<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include
        layout="@layout/layout_toolbar" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activityMargin"
            android:layout_marginRight="@dimen/activityMargin"
            android:orientation="vertical">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchMaxStrengthVibrations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/switchMaxStrengthVibrations" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:focusable="true"
                android:text="@string/labelHourFormat" />

            <RadioGroup
                android:id="@+id/radioHourFormat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/button12Hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button12Hours" />

                <RadioButton
                    android:id="@+id/button24Hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button24Hours" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:focusable="true"
                android:text="@string/labelTimeComponentOrder" />

            <RadioGroup
                android:id="@+id/radioTimeComponentOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/buttonHoursMinutes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonHoursMinutes" />

                <RadioButton
                    android:id="@+id/buttonMinutesHours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonMinutesHours" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextClock
            android:id="@+id/textClock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttonTest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorAccent"
            android:text="Test" />
    </LinearLayout>

</RelativeLayout>
